--- a/program/src/App.css
+++ b/program/src/App.css
@@ -6,7 +6,6 @@
 }
 
 .navbar {
-  background-color: #282c34;
   padding: 20px;
   color: white;
   margin-bottom: 20px;
@@ -16,6 +15,8 @@
 .navbar h1 {
   margin: 0;
   padding-bottom: 10px;
+  border: none;
+  text-shadow: 0 0 10px #e478ff;
 }
 
 .nav-links {
@@ -34,31 +35,37 @@
 }
 
 .nav-links a:hover {
-  background-color: #61dafb;
+  background-color: #e961fb;
   color: #282c34;
 }
 
 .nav-links a.active {
-  background-color: #61dafb;
+  background-color: #e961fb;
   color: #282c34;
   font-weight: bold;
 }
 
 .content {
-  background-color: #f5f5f5;
+  background: linear-gradient(90deg, #242424 0%, #1c1c1c 100%);
   padding: 20px;
+  border: 2px solid rgb(211, 33, 255);
   border-radius: 5px;
+  color: white;
+  box-shadow: 0px 0px 10px 2px rgba(249, 80, 255, 0.3);
+  text-shadow: 0 0 5px #e478ff;
 }
 
-.user-card, .product-card {
-  background: white;
+.user-card,
+.product-card {
+  background: rgb(32, 32, 32);
   padding: 15px;
   margin: 10px 0;
   border-radius: 5px;
-  box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
-.user-card h3, .product-card h3 {
+.user-card h3,
+.product-card h3 {
   margin-top: 0;
 }
 
@@ -69,4 +76,53 @@
 
 .not-found h2 {
   color: #ff4444;
+  text-shadow: 0 0 5px #ff2e2e;
+}
+
+hr {
+  text-shadow: 0 0 5px #e478ff;
+}
+
+img {
+  width: 200px;
+  height: auto;
+  border-radius: 12px;
+  border: 2px solid #b134c2;
+  padding: 10px;
+  background-color: rgba(0, 0, 0, 0.5);
+  box-shadow: 0 0 20px rgba(255, 0, 234, 0.4), 0 0 10px rgba(0, 255, 229, 0.2);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  margin: 10px 0;
+}
+
+button {
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: #310a3a;
+  color: #d344f7;
+  border: 2px solid #ff00fb;
+  border-radius: 10px;
+  text-decoration: none;
+  font-weight: bold;
+  text-align: center;
+  box-shadow: 0 0 10px rgba(217, 0, 255, 0.6);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+button:hover {
+  transform: scale(1.1);
+  box-shadow: 0 0 30px rgba(217, 0, 255, 0.6);
+}
+
+.notice {
+  color: red;
+  text-shadow: 0px 0px 10px rgb(247, 32, 32);
+}
+
+.link {
+  color: #d344f7;
+}
+
+.link:hover {
+  text-shadow: 0px 0px 15px rgb(247, 32, 215);
 }
