--- a/program/src/App.css
+++ b/program/src/App.css
@@ -32,9 +32,11 @@
   padding: 5px 10px;
   border-radius: 3px;
   transition: background-color 0.3s;
+  text-shadow: 0 0 5px #e478ff;
 }
 
 .nav-links a:hover {
+  box-shadow: 0px 0px 10px 2px rgba(249, 80, 255, 0.3);
   background-color: #e961fb;
   color: #282c34;
 }
